<resources>
    <string name="app_name">Educa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Educa</string>
    <string name="menu_confer">Feira</string>
    <string name="menu_schedule">Agenda</string>
    <string name="menu_webinar">webinars</string>
    <string name="menu_game">Jogo</string>
    <string name="menu_favorite">Favoritos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">Google LLC é uma empresa multinacional de serviços online e software dos Estados Unidos. O Google hospeda e desenvolve uma série de serviços e produtos baseados na internet e gera lucro principalmente através da publicidade pelo AdWords. A Google é a principal subsidiária da Alphabet Inc.</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="title_onboarding_1">Seja bem-vindo ao educa !</string>
    <string name="description_onboarding_1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque </string>

    <string name="title_onboarding_2">Acompanhe o evento online</string>
    <string name="description_onboarding_2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque </string>

    <string name="title_onboarding_3">Encontre material de estudo</string>
    <string name="description_onboarding_3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque. Good Coding!</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>

    <string name="start">start</string>
    <string name="skip">pular</string>
    <string name="finish">fim</string>
    <string name="next">proximo</string>
    <string name="back">voltar</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>