<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_confer"
            android:icon="@drawable/ic_ondemand_video_24"
            android:title="@string/menu_confer" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_games"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_border"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_webinar"
            android:icon="@drawable/ic_baseline_video_library_24"
            android:title="@string/menu_webinar" />
    </group>
</menu>