<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.educa.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_confer"
        android:name="com.app.educa.ui.fragment.ConferFragment"
        android:label="@string/menu_confer"
        tools:layout="@layout/fragment_confer" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.app.educa.ui.fragment.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.educa.ui.fragment.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <activity
        android:id="@+id/nav_favorite"
        android:name="com.app.educa.ui.activity.FavoriteActivity"
        android:label="@string/menu_favorite"
        tools:layout="@layout/activity_favorite" />
</navigation>